accelerated-domains: add sunrtnet.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80045,6 +80045,7 @@ server=/sunresin.net/114.114.114.114
 server=/sunrisedutyfree.com/114.114.114.114
 server=/sunrisenan.com/114.114.114.114
 server=/sunrizetech.com/114.114.114.114
+server=/sunrtnet.com/114.114.114.114
 server=/sunseekerpower.com/114.114.114.114
 server=/sunsetcare-mirrortech.com/114.114.114.114
 server=/sunsharer.com/114.114.114.114
