accelerated-domains: add supertime-malting.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80160,6 +80160,7 @@ server=/supersocket.net/114.114.114.114
 server=/superstar-med.com/114.114.114.114
 server=/superstars.vip/114.114.114.114
 server=/superteacherworksheers.com/114.114.114.114
+server=/supertime-malting.com/114.114.114.114
 server=/supertracker.net/114.114.114.114
 server=/supervisionus.com/114.114.114.114
 server=/supervote.cc/114.114.114.114
