accelerated-domains: add gdktzx.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34048,6 +34048,7 @@ server=/gdkjk56.com/114.114.114.114
 server=/gdkjw.com/114.114.114.114
 server=/gdks168.com/114.114.114.114
 server=/gdkszx.com/114.114.114.114
+server=/gdktzx.com/114.114.114.114
 server=/gdkxpcb.com/114.114.114.114
 server=/gdkz88.com/114.114.114.114
 server=/gdlaoan.com/114.114.114.114
