--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -56776,6 +56776,7 @@ server=/lianghuadashi.com/114.114.114.114
 server=/liangjan.com/114.114.114.114
 server=/liangjiangbashu.com/114.114.114.114
 server=/liangjianghu.com/114.114.114.114
+server=/liangjiangroup.com/114.114.114.114
 server=/liangjihui.com/114.114.114.114
 server=/liangjiu.shop/114.114.114.114
 server=/liangka.vip/114.114.114.114
