--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76112,6 +76112,7 @@ server=/shenghua-fire.com/114.114.114.114
 server=/shenghuabao.net/114.114.114.114
 server=/shenghuagroup.com/114.114.114.114
 server=/shenghui56.com/114.114.114.114
+server=/shenghuigd.com/114.114.114.114
 server=/shenghuo365.com/114.114.114.114
 server=/shenghuojia.com/114.114.114.114
 server=/shenghuorili.com/114.114.114.114
