accelerated-domains: add jjrw.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51033,6 +51033,7 @@ server=/jjonline.org/114.114.114.114
 server=/jjppt.com/114.114.114.114
 server=/jjqj.net/114.114.114.114
 server=/jjr.vip/114.114.114.114
+server=/jjrw.com/114.114.114.114
 server=/jjs169.com/114.114.114.114
 server=/jjsedu.org/114.114.114.114
 server=/jjshome.com/114.114.114.114
