accelerated-domains: add gftiec.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34592,6 +34592,7 @@ server=/gfren.org/114.114.114.114
 server=/gfrtrttweet.com/114.114.114.114
 server=/gfslgy.com/114.114.114.114
 server=/gfsz.net/114.114.114.114
+server=/gftiec.com/114.114.114.114
 server=/gfttek.com/114.114.114.114
 server=/gftuan.com/114.114.114.114
 server=/gfun.me/114.114.114.114
