accelerated-domains: add hengfang.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41669,6 +41669,7 @@ server=/hengdian.com/114.114.114.114
 server=/hengdianfilm.com/114.114.114.114
 server=/hengdianworld.com/114.114.114.114
 server=/hengdulaw.com/114.114.114.114
+server=/hengfang.com/114.114.114.114
 server=/hengfujz.com/114.114.114.114
 server=/henggufood.com/114.114.114.114
 server=/henghe-group.com/114.114.114.114
