--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52877,6 +52877,7 @@ server=/jydc.com/114.114.114.114
 server=/jydj.net/114.114.114.114
 server=/jydoc.com/114.114.114.114
 server=/jydonghu.com/114.114.114.114
+server=/jyebank.com/114.114.114.114
 server=/jyecc.com/114.114.114.114
 server=/jyeoo.com/114.114.114.114
 server=/jyeoo.net/114.114.114.114
