accelerated-domains: add china-isi.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19757,6 +19757,7 @@ server=/china-hxzb.com/114.114.114.114
 server=/china-hzd.com/114.114.114.114
 server=/china-indium.com/114.114.114.114
 server=/china-invests.net/114.114.114.114
+server=/china-isi.com/114.114.114.114
 server=/china-isotope.com/114.114.114.114
 server=/china-j.com/114.114.114.114
 server=/china-jianan.com/114.114.114.114
