accelerated-domains: add jynyrc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52920,6 +52920,7 @@ server=/jymcn.com/114.114.114.114
 server=/jymhb.com/114.114.114.114
 server=/jymredu.com/114.114.114.114
 server=/jynews.net/114.114.114.114
+server=/jynyrc.com/114.114.114.114
 server=/jyoptical.com/114.114.114.114
 server=/jyoptics.com/114.114.114.114
 server=/jypc.org/114.114.114.114
