accelerated-domains: add xqllaser.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94623,6 +94623,7 @@ server=/xqishuta.com/114.114.114.114
 server=/xqiushu.com/114.114.114.114
 server=/xqjmzc.com/114.114.114.114
 server=/xqjs.net/114.114.114.114
+server=/xqllaser.com/114.114.114.114
 server=/xqmdc.com/114.114.114.114
 server=/xqmgm.com/114.114.114.114
 server=/xqmice.com/114.114.114.114
