accelerated-domains: add gdchain.org

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33925,6 +33925,7 @@ server=/gdcci.com/114.114.114.114
 server=/gdcct.com/114.114.114.114
 server=/gdcdsh.com/114.114.114.114
 server=/gdcgkg.com/114.114.114.114
+server=/gdchain.org/114.114.114.114
 server=/gdchess.com/114.114.114.114
 server=/gdcic.net/114.114.114.114
 server=/gdcjrhcjh.com/114.114.114.114
