--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34130,6 +34130,7 @@ server=/gdsgd.com/114.114.114.114
 server=/gdshcm.com/114.114.114.114
 server=/gdshe.org/114.114.114.114
 server=/gdshunna.net/114.114.114.114
+server=/gdshuojin.com/114.114.114.114
 server=/gdskfz.com/114.114.114.114
 server=/gdskin.com/114.114.114.114
 server=/gdslrobot.com/114.114.114.114
