--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34131,6 +34131,7 @@ server=/gdshcm.com/114.114.114.114
 server=/gdshe.org/114.114.114.114
 server=/gdshunna.net/114.114.114.114
 server=/gdshuojin.com/114.114.114.114
+server=/gdsia.net/114.114.114.114
 server=/gdskfz.com/114.114.114.114
 server=/gdskin.com/114.114.114.114
 server=/gdslrobot.com/114.114.114.114
