--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33996,6 +33996,7 @@ server=/gdgwyw.com/114.114.114.114
 server=/gdgxxbw.com/114.114.114.114
 server=/gdgzhengzhou.com/114.114.114.114
 server=/gdgzrb.com/114.114.114.114
+server=/gdhairun.com/114.114.114.114
 server=/gdhaoma.com/114.114.114.114
 server=/gdhbsh.com/114.114.114.114
 server=/gdhchina.com/114.114.114.114
