accelerated-domains: add szhxbiz.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81061,6 +81061,7 @@ server=/szhuhang.com/114.114.114.114
 server=/szhulian.com/114.114.114.114
 server=/szhulian.net/114.114.114.114
 server=/szhwad.com/114.114.114.114
+server=/szhxbiz.com/114.114.114.114
 server=/szhytrip.com/114.114.114.114
 server=/szhzsd.com/114.114.114.114
 server=/szhzzl.com/114.114.114.114
