accelerated-domains: add polycd.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68821,6 +68821,7 @@ server=/poloxue.com/114.114.114.114
 server=/poluosenko.com/114.114.114.114
 server=/poly-gx.com/114.114.114.114
 server=/poly-pm.com/114.114.114.114
+server=/polycd.com/114.114.114.114
 server=/polycent.com/114.114.114.114
 server=/polycn.com/114.114.114.114
 server=/polycom-jl.com/114.114.114.114
