accelerated-domains: add cn-hbs.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21925,6 +21925,7 @@ server=/cn-elite.com/114.114.114.114
 server=/cn-em.com/114.114.114.114
 server=/cn-food.net/114.114.114.114
 server=/cn-goldeneagle.com/114.114.114.114
+server=/cn-hbs.com/114.114.114.114
 server=/cn-healthcare.com/114.114.114.114
 server=/cn-healthclass.com/114.114.114.114
 server=/cn-huaguang.com/114.114.114.114
