accelerated-domains: add gdepi.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33972,6 +33972,7 @@ server=/gdedu123.com/114.114.114.114
 server=/gdefair.com/114.114.114.114
 server=/gdeia.com/114.114.114.114
 server=/gdems.com/114.114.114.114
+server=/gdepi.com/114.114.114.114
 server=/gdevops.com/114.114.114.114
 server=/gdfc0563.com/114.114.114.114
 server=/gdfeiyang.com/114.114.114.114
