accelerated-domains: add shiwang1688.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76593,6 +76593,7 @@ server=/shitoulm.com/114.114.114.114
 server=/shitourom.com/114.114.114.114
 server=/shitsu.co.jp/114.114.114.114
 server=/shiwan.com/114.114.114.114
+server=/shiwang1688.com/114.114.114.114
 server=/shiwangyun.com/114.114.114.114
 server=/shiweisemi.com/114.114.114.114
 server=/shiwenlu.com/114.114.114.114
