accelerated-domains: add fydvtu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33214,6 +33214,7 @@ server=/fycpu.com/114.114.114.114
 server=/fyddj.com/114.114.114.114
 server=/fyddjys.com/114.114.114.114
 server=/fydeos.com/114.114.114.114
+server=/fydvtu.com/114.114.114.114
 server=/fyeds0.com/114.114.114.114
 server=/fyeds1.com/114.114.114.114
 server=/fyeds2.com/114.114.114.114
