--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34027,6 +34027,7 @@ server=/gdinin.com/114.114.114.114
 server=/gdinsight.com/114.114.114.114
 server=/gdiso.com/114.114.114.114
 server=/gdj-tech.com/114.114.114.114
+server=/gdjdxh.com/114.114.114.114
 server=/gdjdxy.com/114.114.114.114
 server=/gdjiabao.com/114.114.114.114
 server=/gdjinge.com/114.114.114.114
