--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35884,6 +35884,7 @@ server=/gpl-express.com/114.114.114.114
 server=/gplayspace.com/114.114.114.114
 server=/gplqdb.com/114.114.114.114
 server=/gplus-lab.com/114.114.114.114
+server=/gpmii.net/114.114.114.114
 server=/gpmro.com/114.114.114.114
 server=/gpnewtech.com/114.114.114.114
 server=/gpowersoft.com/114.114.114.114
