accelerated-domains: add gdjlxh.org

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34037,6 +34037,7 @@ server=/gdjiutu.com/114.114.114.114
 server=/gdjktk.com/114.114.114.114
 server=/gdjky.com/114.114.114.114
 server=/gdjlfood.com/114.114.114.114
+server=/gdjlxh.org/114.114.114.114
 server=/gdjly.com/114.114.114.114
 server=/gdjs120.com/114.114.114.114
 server=/gdjshd.com/114.114.114.114
