--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40252,6 +40252,7 @@ server=/hanqidq.com/114.114.114.114
 server=/hanqigroup.com/114.114.114.114
 server=/hanqinghb.com/114.114.114.114
 server=/hanrunbt.com/114.114.114.114
+server=/hans-ad.com/114.114.114.114
 server=/hansaoxinxi.xyz/114.114.114.114
 server=/hanschen.site/114.114.114.114
 server=/hansenexpo.com/114.114.114.114
