accelerated-domains: add qunhaolawfirm.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71799,6 +71799,7 @@ server=/quncrm.com/114.114.114.114
 server=/qunfenxiang.net/114.114.114.114
 server=/qunhai.net/114.114.114.114
 server=/qunhaohotel.com/114.114.114.114
+server=/qunhaolawfirm.com/114.114.114.114
 server=/qunhei.com/114.114.114.114
 server=/qunhequnhe.com/114.114.114.114
 server=/qunhuisp.com/114.114.114.114
