--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35715,6 +35715,7 @@ server=/goodprogrammer.org/114.114.114.114
 server=/goodrain.com/114.114.114.114
 server=/goodschool.world/114.114.114.114
 server=/goodsid.com/114.114.114.114
+server=/goodsku.com/114.114.114.114
 server=/goodstudydayup.com/114.114.114.114
 server=/goodswisswatch.com/114.114.114.114
 server=/goodtea.cc/114.114.114.114
