accelerated-domains: add kyk.cc

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55292,6 +55292,7 @@ server=/kygz1.com/114.114.114.114
 server=/kyhtech.com/114.114.114.114
 server=/kyjlhz.com/114.114.114.114
 server=/kyjxy.com/114.114.114.114
+server=/kyk.cc/114.114.114.114
 server=/kylc.com/114.114.114.114
 server=/kyleduo.com/114.114.114.114
 server=/kyligence.io/114.114.114.114
