accelerated-domains: add upkuajing.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85985,6 +85985,7 @@ server=/upimgt.com/114.114.114.114
 server=/upin.com/114.114.114.114
 server=/upkao.com/114.114.114.114
 server=/upkk.com/114.114.114.114
+server=/upkuajing.com/114.114.114.114
 server=/uplookedu.com/114.114.114.114
 server=/uplooking.com/114.114.114.114
 server=/upluck.cc/114.114.114.114
