--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54927,6 +54927,7 @@ server=/kuajing.hk/114.114.114.114
 server=/kuajing84.com/114.114.114.114
 server=/kuajingmaihuo.com/114.114.114.114
 server=/kuajingnet.com/114.114.114.114
+server=/kuajingvs.com/114.114.114.114
 server=/kuajingyan.com/114.114.114.114
 server=/kuajingzhushou.com/114.114.114.114
 server=/kuajinzhifu.com/114.114.114.114
