accelerated-domains: add jiatongyitu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49953,6 +49953,7 @@ server=/jiasule.org/114.114.114.114
 server=/jiatejijin.com/114.114.114.114
 server=/jiatengflycdn.com/114.114.114.114
 server=/jiatianxiazhuangshi.com/114.114.114.114
+server=/jiatongyitu.com/114.114.114.114
 server=/jiatop.com/114.114.114.114
 server=/jiatui.com/114.114.114.114
 server=/jiatushuke.com/114.114.114.114
