accelerated-domains: add loudseas.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58394,6 +58394,7 @@ server=/lou86.com/114.114.114.114
 server=/loubobooo.com/114.114.114.114
 server=/loudika.com/114.114.114.114
 server=/louding.com/114.114.114.114
+server=/loudseas.com/114.114.114.114
 server=/louge.ltd/114.114.114.114
 server=/louislivi.com/114.114.114.114
 server=/loukky.com/114.114.114.114
