accelerated-domains: add techb2c.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82270,6 +82270,7 @@ server=/tech4joy.com/114.114.114.114
 server=/techan.com/114.114.114.114
 server=/techanshop.com/114.114.114.114
 server=/techantong.net/114.114.114.114
+server=/techb2c.com/114.114.114.114
 server=/techbeat.net/114.114.114.114
 server=/techbrood.com/114.114.114.114
 server=/techfine.net/114.114.114.114
