accelerated-domains: add 2i1i.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -3016,6 +3016,7 @@ server=/2healthshop.com/114.114.114.114
 server=/2heng.xin/114.114.114.114
 server=/2hu.net/114.114.114.114
 server=/2hua.com/114.114.114.114
+server=/2i1i.com/114.114.114.114
 server=/2ibook.com/114.114.114.114
 server=/2ic.cc/114.114.114.114
 server=/2ita.com/114.114.114.114
