accelerated-domains: add asiaecs.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12073,6 +12073,7 @@ server=/asiacool.com/114.114.114.114
 server=/asiacorp.net/114.114.114.114
 server=/asiae.com/114.114.114.114
 server=/asiaeap.com/114.114.114.114
+server=/asiaecs.com/114.114.114.114
 server=/asiafactor.com/114.114.114.114
 server=/asiafm.hk/114.114.114.114
 server=/asiafm.net/114.114.114.114
