--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54774,6 +54774,7 @@ server=/ku82.com/114.114.114.114
 server=/ku90.com/114.114.114.114
 server=/ku9377.com/114.114.114.114
 server=/ku987.com/114.114.114.114
+server=/kua365.com/114.114.114.114
 server=/kuaaa.com/114.114.114.114
 server=/kuabaobao.com/114.114.114.114
 server=/kuacg.com/114.114.114.114
