--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77222,6 +77222,7 @@ server=/shukongwang.com/114.114.114.114
 server=/shukuai.com/114.114.114.114
 server=/shukuai.net/114.114.114.114
 server=/shukuai3.com/114.114.114.114
+server=/shukuajing.com/114.114.114.114
 server=/shukuge.com/114.114.114.114
 server=/shukw.com/114.114.114.114
 server=/shukwai.com/114.114.114.114
