accelerated-domains: add cdcea.org

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18255,6 +18255,7 @@ server=/cdbsfund.com/114.114.114.114
 server=/cdcbn.com/114.114.114.114
 server=/cdcc.ink/114.114.114.114
 server=/cdccpit.org/114.114.114.114
+server=/cdcea.org/114.114.114.114
 server=/cdcet.com/114.114.114.114
 server=/cdcgames.net/114.114.114.114
 server=/cdchjyy.com/114.114.114.114
