--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54179,6 +54179,7 @@ server=/kjycx.com/114.114.114.114
 server=/kjyicdn.com/114.114.114.114
 server=/kjykcdn.com/114.114.114.114
 server=/kjzhan.com/114.114.114.114
+server=/kjzhixing.com/114.114.114.114
 server=/kjzj.com/114.114.114.114
 server=/kjzpg.org/114.114.114.114
 server=/kjzx.net/114.114.114.114
