--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73884,6 +73884,7 @@ server=/saibeiip.com/114.114.114.114
 server=/saibeinews.com/114.114.114.114
 server=/saibo.com/114.114.114.114
 server=/saiboauto.com/114.114.114.114
+server=/saiboyy.com/114.114.114.114
 server=/saic-audi.mobi/114.114.114.114
 server=/saic-finance.com/114.114.114.114
 server=/saic-gm.com/114.114.114.114
