--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58610,6 +58610,7 @@ server=/lslfs.com/114.114.114.114
 server=/lslihai.com/114.114.114.114
 server=/lslkkyj.com/114.114.114.114
 server=/lsltech.net/114.114.114.114
+server=/lsmaps.com/114.114.114.114
 server=/lsmtjy.com/114.114.114.114
 server=/lsnm.com/114.114.114.114
 server=/lsoli.com/114.114.114.114
