--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30081,6 +30081,7 @@ server=/ergengtv.com/114.114.114.114
 server=/ergouzi.fun/114.114.114.114
 server=/erhua.cc/114.114.114.114
 server=/erhuyou.com/114.114.114.114
+server=/eric-bot.com/114.114.114.114
 server=/ericabradley.net/114.114.114.114
 server=/ericdeng.net/114.114.114.114
 server=/erichfund.com/114.114.114.114
