--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27227,6 +27227,7 @@ server=/dnw.icu/114.114.114.114
 server=/dnwxwww.com/114.114.114.114
 server=/dnxtc.net/114.114.114.114
 server=/dnxttech.com/114.114.114.114
+server=/dny123.com/114.114.114.114
 server=/dnzhuti.com/114.114.114.114
 server=/dnzjds.com/114.114.114.114
 server=/dnzp.com/114.114.114.114
