--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48145,6 +48145,7 @@ server=/isealsuite.com/114.114.114.114
 server=/isecsp.com/114.114.114.114
 server=/iseedog.com/114.114.114.114
 server=/iseekids.com/114.114.114.114
+server=/isellerpal.com/114.114.114.114
 server=/isenruan.com/114.114.114.114
 server=/isenxwsc.com/114.114.114.114
 server=/iseoku.com/114.114.114.114
