accelerated-domains: add kuajingyang.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54939,6 +54939,7 @@ server=/kuajingmaihuo.com/114.114.114.114
 server=/kuajingnet.com/114.114.114.114
 server=/kuajingvs.com/114.114.114.114
 server=/kuajingyan.com/114.114.114.114
+server=/kuajingyang.com/114.114.114.114
 server=/kuajingzhushou.com/114.114.114.114
 server=/kuajinzhifu.com/114.114.114.114
 server=/kuakao.com/114.114.114.114
