--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78204,6 +78204,7 @@ server=/skydodi.com/114.114.114.114
 server=/skydust.net/114.114.114.114
 server=/skyeaglee.com/114.114.114.114
 server=/skyecs.com/114.114.114.114
+server=/skyee360.com/114.114.114.114
 server=/skyfeather.online/114.114.114.114
 server=/skyfollowsnow.pro/114.114.114.114
 server=/skyfont.com/114.114.114.114
