accelerated-domains: add whalet.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89248,6 +89248,7 @@ server=/whale123.com/114.114.114.114
 server=/whalecloud.com/114.114.114.114
 server=/whalecloudexport.com/114.114.114.114
 server=/whalefall.space/114.114.114.114
+server=/whalet.com/114.114.114.114
 server=/whaletvlive.com/114.114.114.114
 server=/whaleunique.com/114.114.114.114
 server=/whalipaycs.com/114.114.114.114
