accelerated-domains: add xingloo.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93284,6 +93284,7 @@ server=/xingliju.com/114.114.114.114
 server=/xinglingyingxue.com/114.114.114.114
 server=/xinglinpukang.com/114.114.114.114
 server=/xinglongdayuan.com/114.114.114.114
+server=/xingloo.com/114.114.114.114
 server=/xingmima.com/114.114.114.114
 server=/xingming.com/114.114.114.114
 server=/xingming.net/114.114.114.114
