--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46305,6 +46305,7 @@ server=/icbcstandardresources.com/114.114.114.114
 server=/icbcstandardsecurities.com/114.114.114.114
 server=/icbcswiss.com/114.114.114.114
 server=/icbcwallet.com/114.114.114.114
+server=/icbeexpo.com/114.114.114.114
 server=/icbkus.com/114.114.114.114
 server=/icbuy.com/114.114.114.114
 server=/icc.link/114.114.114.114
