accelerated-domains: add umfintech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85754,6 +85754,7 @@ server=/umengcloud.com/114.114.114.114
 server=/umenglog.com/114.114.114.114
 server=/umetrip.com/114.114.114.114
 server=/umexair.com/114.114.114.114
+server=/umfintech.com/114.114.114.114
 server=/umgg.biz/114.114.114.114
 server=/umihome.com/114.114.114.114
 server=/umilu.com/114.114.114.114
