--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -11081,6 +11081,7 @@ server=/amz123.com/114.114.114.114
 server=/amz520.com/114.114.114.114
 server=/amzcaptain.com/114.114.114.114
 server=/amzcs.com/114.114.114.114
+server=/amzdh.com/114.114.114.114
 server=/amzics.com/114.114.114.114
 server=/amzndns-cn.biz/114.114.114.114
 server=/amzndns-cn.com/114.114.114.114
