accelerated-domains: add westmonth.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89105,6 +89105,7 @@ server=/westlakeinst.com/114.114.114.114
 server=/westlakeomics.com/114.114.114.114
 server=/westleadfund.com/114.114.114.114
 server=/westmining.com/114.114.114.114
+server=/westmonth.com/114.114.114.114
 server=/westonecloud.com/114.114.114.114
 server=/westpac.group/114.114.114.114
 server=/westsecu.com/114.114.114.114
