--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -56629,6 +56629,7 @@ server=/leyoujia.com/114.114.114.114
 server=/leyouquan.com/114.114.114.114
 server=/leyu.com/114.114.114.114
 server=/leyue100.com/114.114.114.114
+server=/leyuglobal.com/114.114.114.114
 server=/leyun001.com/114.114.114.114
 server=/leyun365.com/114.114.114.114
 server=/leyuncp.com/114.114.114.114
