accelerated-domains: add waimaob2c.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87616,6 +87616,7 @@ server=/waimai361.com/114.114.114.114
 server=/waimaimingtang.com/114.114.114.114
 server=/waimaiwanjia.com/114.114.114.114
 server=/waimao6.com/114.114.114.114
+server=/waimaob2c.com/114.114.114.114
 server=/waimaoniu.net/114.114.114.114
 server=/waimaoribao.com/114.114.114.114
 server=/waimaozhuge.com/114.114.114.114
