accelerated-domains: add yuoucn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -99934,6 +99934,7 @@ server=/yunzujia.com/114.114.114.114
 server=/yunzuowen.com/114.114.114.114
 server=/yunzz.net/114.114.114.114
 server=/yunzzz.com/114.114.114.114
+server=/yuoucn.com/114.114.114.114
 server=/yupao.com/114.114.114.114
 server=/yupaowang.com/114.114.114.114
 server=/yupinny.com/114.114.114.114
