accelerated-domains: add srzx.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79342,6 +79342,7 @@ server=/srxzc.com/114.114.114.114
 server=/srxzz.com/114.114.114.114
 server=/srzc.com/114.114.114.114
 server=/srzdq.com/114.114.114.114
+server=/srzx.com/114.114.114.114
 server=/srzxjt.com/114.114.114.114
 server=/ss-ceo.com/114.114.114.114
 server=/ss-smartech.com/114.114.114.114
