--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32619,6 +32619,7 @@ server=/freecat.work/114.114.114.114
 server=/freedgo.com/114.114.114.114
 server=/freedirlist.com/114.114.114.114
 server=/freedom2021.vip/114.114.114.114
+server=/freedomscm.com/114.114.114.114
 server=/freedoonline.com/114.114.114.114
 server=/freefrp.net/114.114.114.114
 server=/freegeeker.com/114.114.114.114
