accelerated-domains: add qingkuajing.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70553,6 +70553,7 @@ server=/qingkaoyan.com/114.114.114.114
 server=/qingkeji.com/114.114.114.114
 server=/qingkongfy.xyz/114.114.114.114
 server=/qingkuaipdf.com/114.114.114.114
+server=/qingkuajing.com/114.114.114.114
 server=/qingkuw.com/114.114.114.114
 server=/qinglan.info/114.114.114.114
 server=/qinglanbaseunicast.com/114.114.114.114
