accelerated-domains: add fairkwa.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30809,6 +30809,7 @@ server=/fair1688.com/114.114.114.114
 server=/fairguard.net/114.114.114.114
 server=/fairguard.tech/114.114.114.114
 server=/fairhr.com/114.114.114.114
+server=/fairkwa.com/114.114.114.114
 server=/fairygui.com/114.114.114.114
 server=/fairysen.com/114.114.114.114
 server=/fairysoftware.com/114.114.114.114
