--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33892,6 +33892,7 @@ server=/gd-kexin.com/114.114.114.114
 server=/gd-lekai.com/114.114.114.114
 server=/gd-linux.com/114.114.114.114
 server=/gd-linux.org/114.114.114.114
+server=/gd-ls.com/114.114.114.114
 server=/gd-ntn.com/114.114.114.114
 server=/gd-shenhua.com/114.114.114.114
 server=/gd-tianchen.com/114.114.114.114
