accelerated-domains: add lanjingerp.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55647,6 +55647,7 @@ server=/lanjie520.com/114.114.114.114
 server=/lanjing5.com/114.114.114.114
 server=/lanjingads.com/114.114.114.114
 server=/lanjinger.com/114.114.114.114
+server=/lanjingerp.com/114.114.114.114
 server=/lanjingfm.com/114.114.114.114
 server=/lanjings.com/114.114.114.114
 server=/lanjingtmt.com/114.114.114.114
