--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27345,6 +27345,7 @@ server=/dollphoin.site/114.114.114.114
 server=/dollsdeclare.com/114.114.114.114
 server=/dollun.com/114.114.114.114
 server=/dolphin-browser.com/114.114.114.114
+server=/dolphin-global.com/114.114.114.114
 server=/dolphin.com/114.114.114.114
 server=/dolphinphp.com/114.114.114.114
 server=/dom-3d.net/114.114.114.114
