accelerated-domains: add srzx100.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79349,6 +79349,7 @@ server=/srxzz.com/114.114.114.114
 server=/srzc.com/114.114.114.114
 server=/srzdq.com/114.114.114.114
 server=/srzx.com/114.114.114.114
+server=/srzx100.com/114.114.114.114
 server=/srzxjt.com/114.114.114.114
 server=/ss-ceo.com/114.114.114.114
 server=/ss-smartech.com/114.114.114.114
