--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51691,6 +51691,7 @@ server=/jpthome.com/114.114.114.114
 server=/jptoe.com/114.114.114.114
 server=/jpush.io/114.114.114.114
 server=/jpushoa.com/114.114.114.114
+server=/jpvat.com/114.114.114.114
 server=/jpwb.cc/114.114.114.114
 server=/jpwb.net/114.114.114.114
 server=/jpwind.com/114.114.114.114
