--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66340,6 +66340,7 @@ server=/oak-amc.com/114.114.114.114
 server=/oaklandjs.com/114.114.114.114
 server=/oaloft.com/114.114.114.114
 server=/oaloft.net/114.114.114.114
+server=/oalur.com/114.114.114.114
 server=/oameibang.com/114.114.114.114
 server=/oaooa.com/114.114.114.114
 server=/oaqi.com/114.114.114.114
