accelerated-domains: add actneed.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9337,6 +9337,7 @@ server=/activity02.com/114.114.114.114
 server=/activity03.com/114.114.114.114
 server=/activity04.com/114.114.114.114
 server=/activity05.com/114.114.114.114
+server=/actneed.com/114.114.114.114
 server=/actoys.com/114.114.114.114
 server=/actoys.net/114.114.114.114
 server=/actranslation.com/114.114.114.114
