accelerated-domains: add amzmm.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -11084,6 +11084,7 @@ server=/amzcaptain.com/114.114.114.114
 server=/amzcs.com/114.114.114.114
 server=/amzdh.com/114.114.114.114
 server=/amzics.com/114.114.114.114
+server=/amzmm.com/114.114.114.114
 server=/amzndns-cn.biz/114.114.114.114
 server=/amzndns-cn.com/114.114.114.114
 server=/amzndns-cn.net/114.114.114.114
