accelerated-domains: add feikua.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31458,6 +31458,7 @@ server=/feijix.com/114.114.114.114
 server=/feijizu.com/114.114.114.114
 server=/feikongbao.com/114.114.114.114
 server=/feiku.com/114.114.114.114
+server=/feikua.net/114.114.114.114
 server=/feiliao.com/114.114.114.114
 server=/feiliks.com/114.114.114.114
 server=/feilixi888.com/114.114.114.114
