accelerated-domains: add jiyikj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50960,6 +50960,7 @@ server=/jixuanw.com/114.114.114.114
 server=/jixuninfo.com/114.114.114.114
 server=/jixunjsq.com/114.114.114.114
 server=/jixunlyq.com/114.114.114.114
+server=/jiyikj.com/114.114.114.114
 server=/jiyili.net/114.114.114.114
 server=/jiyin-tech.com/114.114.114.114
 server=/jiyin2020.com/114.114.114.114
