--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54179,6 +54179,7 @@ server=/kjkd.com/114.114.114.114
 server=/kjkp.com/114.114.114.114
 server=/kjks.net/114.114.114.114
 server=/kjkxun.com/114.114.114.114
+server=/kjmofang.com/114.114.114.114
 server=/kjmte.com/114.114.114.114
 server=/kjmti.com/114.114.114.114
 server=/kjpmconsulting.com/114.114.114.114
