--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54188,6 +54188,7 @@ server=/kjsdh6.com/114.114.114.114
 server=/kjson.com/114.114.114.114
 server=/kjsv.com/114.114.114.114
 server=/kjt.com/114.114.114.114
+server=/kjtbao.com/114.114.114.114
 server=/kjtianshanxu.com/114.114.114.114
 server=/kjw.cc/114.114.114.114
 server=/kjwlxt.com/114.114.114.114
