--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -59650,6 +59650,7 @@ server=/m.dji.com/114.114.114.114
 server=/m.sohu/114.114.114.114
 server=/m.travelzoo.com/114.114.114.114
 server=/m1.run/114.114.114.114
+server=/m123.com/114.114.114.114
 server=/m1315.com/114.114.114.114
 server=/m1728.com/114.114.114.114
 server=/m176.net/114.114.114.114
