accelerated-domains: add fecify.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31365,6 +31365,7 @@ server=/fe520.com/114.114.114.114
 server=/feadi.com/114.114.114.114
 server=/feanton.com/114.114.114.114
 server=/featchina.com/114.114.114.114
+server=/fecify.com/114.114.114.114
 server=/fecmall.com/114.114.114.114
 server=/fecn.net/114.114.114.114
 server=/fecshop.com/114.114.114.114
