--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54950,6 +54950,7 @@ server=/kuaizy.com/114.114.114.114
 server=/kuajing.com/114.114.114.114
 server=/kuajing.hk/114.114.114.114
 server=/kuajing84.com/114.114.114.114
+server=/kuajingai.com/114.114.114.114
 server=/kuajingmaihuo.com/114.114.114.114
 server=/kuajingnet.com/114.114.114.114
 server=/kuajingvs.com/114.114.114.114
