accelerated-domains: add wivo.cc

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89929,6 +89929,7 @@ server=/witrn.com/114.114.114.114
 server=/witschools.com/114.114.114.114
 server=/witspring.com/114.114.114.114
 server=/wityx.com/114.114.114.114
+server=/wivo.cc/114.114.114.114
 server=/wiwide.com/114.114.114.114
 server=/wiwide.net/114.114.114.114
 server=/wixdigital.com/114.114.114.114
