--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -3260,6 +3260,7 @@ server=/328vip.com/114.114.114.114
 server=/3290.com/114.114.114.114
 server=/32ayi.com/114.114.114.114
 server=/32bm.cc/114.114.114.114
+server=/32cd.com/114.114.114.114
 server=/32cdn.com/114.114.114.114
 server=/32ka.com/114.114.114.114
 server=/32r.com/114.114.114.114
