--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54194,6 +54194,7 @@ server=/kjsv.com/114.114.114.114
 server=/kjt.com/114.114.114.114
 server=/kjtbao.com/114.114.114.114
 server=/kjtianshanxu.com/114.114.114.114
+server=/kjtong.com/114.114.114.114
 server=/kjw.cc/114.114.114.114
 server=/kjwlxt.com/114.114.114.114
 server=/kjycx.com/114.114.114.114
