accelerated-domains: add zeyuan123.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101051,6 +101051,7 @@ server=/zexiaoqiao.com/114.114.114.114
 server=/zeyouquan.com/114.114.114.114
 server=/zeyu99.com/114.114.114.114
 server=/zeyuan.shop/114.114.114.114
+server=/zeyuan123.com/114.114.114.114
 server=/zeze.com/114.114.114.114
 server=/zezhengcnc.com/114.114.114.114
 server=/zezhenwangluo.com/114.114.114.114
