accelerated-domains: add crossborderlion.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23734,6 +23734,7 @@ server=/crodigy.com/114.114.114.114
 server=/crodigynat.com/114.114.114.114
 server=/croot.com/114.114.114.114
 server=/cross-border-public.com/114.114.114.114
+server=/crossborderlion.com/114.114.114.114
 server=/crossingstarstudio.com/114.114.114.114
 server=/crossmo.com/114.114.114.114
 server=/crossoverchina.com/114.114.114.114
