accelerated-domains: add hbasstu.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40799,6 +40799,7 @@ server=/hbahyy.com/114.114.114.114
 server=/hbairport.com/114.114.114.114
 server=/hbanbao.com/114.114.114.114
 server=/hbaog.com/114.114.114.114
+server=/hbasstu.net/114.114.114.114
 server=/hbbaidu.com/114.114.114.114
 server=/hbbfyfy.com/114.114.114.114
 server=/hbbidcloud.com/114.114.114.114
