accelerated-domains: add hitoor.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42426,6 +42426,7 @@ server=/hitfmfans.com/114.114.114.114
 server=/hitgk.com/114.114.114.114
 server=/hitnology.com/114.114.114.114
 server=/hitnslab.net/114.114.114.114
+server=/hitoor.com/114.114.114.114
 server=/hitouch.com/114.114.114.114
 server=/hitoupiao.com/114.114.114.114
 server=/hitozumi.com/114.114.114.114
