--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54960,6 +54960,7 @@ server=/kuajingai.com/114.114.114.114
 server=/kuajingmaihuo.com/114.114.114.114
 server=/kuajingnet.com/114.114.114.114
 server=/kuajingvs.com/114.114.114.114
+server=/kuajingx.com/114.114.114.114
 server=/kuajingyan.com/114.114.114.114
 server=/kuajingyang.com/114.114.114.114
 server=/kuajingzhushou.com/114.114.114.114
