--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80200,6 +80200,7 @@ server=/superaicdn.com/114.114.114.114
 server=/superayi.com/114.114.114.114
 server=/superbed.cc/114.114.114.114
 server=/superboss.cc/114.114.114.114
+server=/superbrowser.com/114.114.114.114
 server=/superbrowser.hk/114.114.114.114
 server=/superbuy.com/114.114.114.114
 server=/superbuyy.com/114.114.114.114
