accelerated-domains: add cbeeexpo.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17829,6 +17829,7 @@ server=/cbdstest.download.prss.microsoft.com/114.114.114.114
 server=/cbe21.com/114.114.114.114
 server=/cbea.com/114.114.114.114
 server=/cbec365.com/114.114.114.114
+server=/cbeeexpo.com/114.114.114.114
 server=/cbes21.com/114.114.114.114
 server=/cbevent.com/114.114.114.114
 server=/cbex.com/114.114.114.114
