accelerated-domains: add sz-cbea.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80872,6 +80872,7 @@ server=/sz-amc.com/114.114.114.114
 server=/sz-baile.com/114.114.114.114
 server=/sz-bst.com/114.114.114.114
 server=/sz-byg.com/114.114.114.114
+server=/sz-cbea.com/114.114.114.114
 server=/sz-cerberus.com/114.114.114.114
 server=/sz-changfeng.com/114.114.114.114
 server=/sz-coin.com/114.114.114.114
