--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9728,6 +9728,7 @@ server=/ahbzyy.com/114.114.114.114
 server=/ahc.ink/114.114.114.114
 server=/ahcaijing.com/114.114.114.114
 server=/ahcaw.com/114.114.114.114
+server=/ahceisc.com/114.114.114.114
 server=/ahcnb.com/114.114.114.114
 server=/ahcoating.com/114.114.114.114
 server=/ahcyfc.com/114.114.114.114
