--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19862,6 +19862,7 @@ server=/china-ws.org/114.114.114.114
 server=/china-wss.com/114.114.114.114
 server=/china-xian.com/114.114.114.114
 server=/china-xiba.com/114.114.114.114
+server=/china-xzgec.com/114.114.114.114
 server=/china-yaguang.com/114.114.114.114
 server=/china-yansheng.com/114.114.114.114
 server=/china-yd.com/114.114.114.114
