accelerated-domains: add silkroad-ec.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77660,6 +77660,7 @@ server=/silinchen.com/114.114.114.114
 server=/siling.com/114.114.114.114
 server=/silique.com/114.114.114.114
 server=/silkpresent.com/114.114.114.114
+server=/silkroad-ec.com/114.114.114.114
 server=/silkroad24.com/114.114.114.114
 server=/silkroadtechnologies.com/114.114.114.114
 server=/silksong.me/114.114.114.114
