--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23462,6 +23462,7 @@ server=/cqkdtui1.com/114.114.114.114
 server=/cqkeb.com/114.114.114.114
 server=/cqkexun.com/114.114.114.114
 server=/cqkfb.com/114.114.114.114
+server=/cqkjb.com/114.114.114.114
 server=/cqkjwx.com/114.114.114.114
 server=/cqkqinfo.com/114.114.114.114
 server=/cqkundian.com/114.114.114.114
