accelerated-domains: add ypkegroup.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98900,6 +98900,7 @@ server=/ypicw.com/114.114.114.114
 server=/ypjiameng.com/114.114.114.114
 server=/ypjsgl.com/114.114.114.114
 server=/ypk.cc/114.114.114.114
+server=/ypkegroup.com/114.114.114.114
 server=/ypky.net/114.114.114.114
 server=/yplady.com/114.114.114.114
 server=/ypppt.com/114.114.114.114
