--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76795,6 +76795,7 @@ server=/shmiaosai.com/114.114.114.114
 server=/shmljm.com/114.114.114.114
 server=/shmockup.com/114.114.114.114
 server=/shmog.org/114.114.114.114
+server=/shms-expo.com/114.114.114.114
 server=/shmtu.net/114.114.114.114
 server=/shmulan.com/114.114.114.114
 server=/shmusic.org/114.114.114.114
