accelerated-domains: add maijiazhichi.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -59872,6 +59872,7 @@ server=/maihuwai.com/114.114.114.114
 server=/maijia.com/114.114.114.114
 server=/maijiakan.com/114.114.114.114
 server=/maijiaw.com/114.114.114.114
+server=/maijiazhichi.com/114.114.114.114
 server=/maijichuang.net/114.114.114.114
 server=/maijiemedia.com/114.114.114.114
 server=/maikami.vip/114.114.114.114
