--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71007,6 +71007,7 @@ server=/qlhimalayantm.com/114.114.114.114
 server=/qlhxhz.com/114.114.114.114
 server=/qlidc.com/114.114.114.114
 server=/qling.com/114.114.114.114
+server=/qlinyun.com/114.114.114.114
 server=/qlippie.com/114.114.114.114
 server=/qlivecdn.com/114.114.114.114
 server=/qll-times.com/114.114.114.114
