--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19734,6 +19734,7 @@ server=/china-designer.com/114.114.114.114
 server=/china-dingjie.com/114.114.114.114
 server=/china-drm.net/114.114.114.114
 server=/china-dt.com/114.114.114.114
+server=/china-ecee.com/114.114.114.114
 server=/china-ef.com/114.114.114.114
 server=/china-eia.com/114.114.114.114
 server=/china-embassy.org/114.114.114.114
