accelerated-domains: add icliexpo.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46427,6 +46427,7 @@ server=/ickimg.com/114.114.114.114
 server=/iclabcn.com/114.114.114.114
 server=/iclicash.com/114.114.114.114
 server=/iclickstatic.com/114.114.114.114
+server=/icliexpo.com/114.114.114.114
 server=/icljt.com/114.114.114.114
 server=/icloud-power.com/114.114.114.114
 server=/icloudcity.com/114.114.114.114
