accelerated-domains: add aplnk.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -11656,6 +11656,7 @@ server=/apkxz.com/114.114.114.114
 server=/apkyx.com/114.114.114.114
 server=/apkzu.com/114.114.114.114
 server=/aplaybox.com/114.114.114.114
+server=/aplnk.com/114.114.114.114
 server=/aplum-inc.com/114.114.114.114
 server=/aplum.com/114.114.114.114
 server=/aplus100.com/114.114.114.114
