accelerated-domains: add huoxiaoyi.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45114,6 +45114,7 @@ server=/huosubtc.com/114.114.114.114
 server=/huotan.com/114.114.114.114
 server=/huowan.com/114.114.114.114
 server=/huowanes.com/114.114.114.114
+server=/huoxiaoyi.com/114.114.114.114
 server=/huoxing24.com/114.114.114.114
 server=/huoxingzi.com/114.114.114.114
 server=/huoxun.com/114.114.114.114
