--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50203,6 +50203,7 @@ server=/jihuoma.com/114.114.114.114
 server=/jihuoyx.com/114.114.114.114
 server=/jiimore.com/114.114.114.114
 server=/jijia.com/114.114.114.114
+server=/jijiaerp.com/114.114.114.114
 server=/jijiagames.com/114.114.114.114
 server=/jijian.link/114.114.114.114
 server=/jijiang168.com/114.114.114.114
