--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98578,6 +98578,7 @@ server=/youkupic.com/114.114.114.114
 server=/youlai.tech/114.114.114.114
 server=/youlanw.com/114.114.114.114
 server=/youle55.com/114.114.114.114
+server=/youlechuhai.com/114.114.114.114
 server=/youlecn.com/114.114.114.114
 server=/youleliwu.com/114.114.114.114
 server=/youleyou.com/114.114.114.114
