--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35261,6 +35261,7 @@ server=/gloryre.com/114.114.114.114
 server=/glorysoft.com/114.114.114.114
 server=/gloryview.com/114.114.114.114
 server=/glorze.com/114.114.114.114
+server=/glosellers.com/114.114.114.114
 server=/glosku.com/114.114.114.114
 server=/glowapp.fun/114.114.114.114
 server=/glowapp.vip/114.114.114.114
