--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62492,6 +62492,7 @@ server=/mooninbox.com/114.114.114.114
 server=/moonjer.com/114.114.114.114
 server=/moonlian.com/114.114.114.114
 server=/moonsec.com/114.114.114.114
+server=/moonsees.com/114.114.114.114
 server=/moonton.com/114.114.114.114
 server=/moontonapp.com/114.114.114.114
 server=/moonvy.com/114.114.114.114
