accelerated-domains: add moqingtk.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62529,6 +62529,7 @@ server=/moqifei.com/114.114.114.114
 server=/moqikaka.com/114.114.114.114
 server=/moqilin.net/114.114.114.114
 server=/moqing.com/114.114.114.114
+server=/moqingtk.com/114.114.114.114
 server=/moqipobing.com/114.114.114.114
 server=/moqu8.com/114.114.114.114
 server=/moquanad.com/114.114.114.114
