accelerated-domains: add amishow.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -11048,6 +11048,7 @@ server=/amijiaoyu.com/114.114.114.114
 server=/amindbox.com/114.114.114.114
 server=/aminglinux.com/114.114.114.114
 server=/amishii.com/114.114.114.114
+server=/amishow.com/114.114.114.114
 server=/amjun.com/114.114.114.114
 server=/amo-solar.com/114.114.114.114
 server=/amo9.com/114.114.114.114
