--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52558,6 +52558,7 @@ server=/jurenqi.com/114.114.114.114
 server=/juroku.net/114.114.114.114
 server=/jurongfangchan.com/114.114.114.114
 server=/jurongrencai.com/114.114.114.114
+server=/jusdasr.com/114.114.114.114
 server=/juseey.com/114.114.114.114
 server=/jusen2008.com/114.114.114.114
 server=/jusha.com/114.114.114.114
