--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96417,6 +96417,7 @@ server=/yckamq.xyz/114.114.114.114
 server=/yckceo.com/114.114.114.114
 server=/yckceo.vip/114.114.114.114
 server=/yckjonline.com/114.114.114.114
+server=/yckjzsq.com/114.114.114.114
 server=/yckkdd.com/114.114.114.114
 server=/ycku.com/114.114.114.114
 server=/ycleaning.com/114.114.114.114
