--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102046,6 +102046,7 @@ server=/zhiji.com/114.114.114.114
 server=/zhijia.com/114.114.114.114
 server=/zhijian114.com/114.114.114.114
 server=/zhijianbao.com/114.114.114.114
+server=/zhijianchuhai.com/114.114.114.114
 server=/zhijianfengyi.com/114.114.114.114
 server=/zhijiangames.com/114.114.114.114
 server=/zhijiannuoche.com/114.114.114.114
