--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -103662,6 +103662,7 @@ server=/zkhgchip.com/114.114.114.114
 server=/zkicme.com/114.114.114.114
 server=/zkii.net/114.114.114.114
 server=/zking.com/114.114.114.114
+server=/zkjds.com/114.114.114.114
 server=/zkkailiaoji.com/114.114.114.114
 server=/zkkjpa.com/114.114.114.114
 server=/zkl2333.com/114.114.114.114
