accelerated-domains: add 17foreign.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -1894,6 +1894,7 @@ server=/17fengguo.com/114.114.114.114
 server=/17fengyou.com/114.114.114.114
 server=/17fifa.com/114.114.114.114
 server=/17font.com/114.114.114.114
+server=/17foreign.com/114.114.114.114
 server=/17forex.com/114.114.114.114
 server=/17fpv.com/114.114.114.114
 server=/17g.com/114.114.114.114
