accelerated-domains: add sunrate.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80137,6 +80137,7 @@ server=/sunpapergroup.com/114.114.114.114
 server=/sunpcm.com/114.114.114.114
 server=/sunprocn.com/114.114.114.114
 server=/sunpun.com/114.114.114.114
+server=/sunrate.com/114.114.114.114
 server=/sunray2000.com/114.114.114.114
 server=/sunresin.net/114.114.114.114
 server=/sunrisedutyfree.com/114.114.114.114
