accelerated-domains: add hgj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42049,6 +42049,7 @@ server=/hghsd.com/114.114.114.114
 server=/hgicreate.com/114.114.114.114
 server=/hgimage.com/114.114.114.114
 server=/hgitv.com/114.114.114.114
+server=/hgj.com/114.114.114.114
 server=/hgj668.com/114.114.114.114
 server=/hgjart.com/114.114.114.114
 server=/hgjiancai.com/114.114.114.114
