--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17902,6 +17902,7 @@ server=/ccb.com/114.114.114.114
 server=/ccbangong.com/114.114.114.114
 server=/ccbbn.org/114.114.114.114
 server=/ccbcos.com/114.114.114.114
+server=/ccbec-shenzhen.com/114.114.114.114
 server=/ccbft.com/114.114.114.114
 server=/ccbfund.com/114.114.114.114
 server=/ccbfutures.com/114.114.114.114
