--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81427,6 +81427,7 @@ server=/szvi-bo.com/114.114.114.114
 server=/szvsdpco.com/114.114.114.114
 server=/szwaishi.com/114.114.114.114
 server=/szwanghong.com/114.114.114.114
+server=/szwanx.com/114.114.114.114
 server=/szwata.com/114.114.114.114
 server=/szwb.com/114.114.114.114
 server=/szwblm.com/114.114.114.114
