--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22625,6 +22625,7 @@ server=/cnsphoto.com/114.114.114.114
 server=/cnssssl.com/114.114.114.114
 server=/cnste.org/114.114.114.114
 server=/cnstock.com/114.114.114.114
+server=/cnstudio.com/114.114.114.114
 server=/cnsudong.com/114.114.114.114
 server=/cnsug.com/114.114.114.114
 server=/cnsun.net/114.114.114.114
