accelerated-domains: add kjgcl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54191,6 +54191,7 @@ server=/kjdsnews.com/114.114.114.114
 server=/kjeport.com/114.114.114.114
 server=/kjfhe.com/114.114.114.114
 server=/kjfns.com/114.114.114.114
+server=/kjgcl.com/114.114.114.114
 server=/kjghyjy.com/114.114.114.114
 server=/kjhaoyun.com/114.114.114.114
 server=/kjimg.com/114.114.114.114
