--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54221,6 +54221,7 @@ server=/kjwlxt.com/114.114.114.114
 server=/kjycx.com/114.114.114.114
 server=/kjyicdn.com/114.114.114.114
 server=/kjykcdn.com/114.114.114.114
+server=/kjyun123.com/114.114.114.114
 server=/kjzhan.com/114.114.114.114
 server=/kjzhixing.com/114.114.114.114
 server=/kjzj.com/114.114.114.114
