--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57110,6 +57110,7 @@ server=/lifezb.com/114.114.114.114
 server=/liffmp.com/114.114.114.114
 server=/lifotronic.com/114.114.114.114
 server=/lifox.net/114.114.114.114
+server=/lifrog.com/114.114.114.114
 server=/lifushop.com/114.114.114.114
 server=/lifves.com/114.114.114.114
 server=/lify.vip/114.114.114.114
