accelerated-domains: add uprimer.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86076,6 +86076,7 @@ server=/uppershop.hk/114.114.114.114
 server=/upppt.com/114.114.114.114
 server=/upqzfile.com/114.114.114.114
 server=/upqzfilebk.com/114.114.114.114
+server=/uprimer.net/114.114.114.114
 server=/ups.ksmobile.net/114.114.114.114
 server=/ups001.com/114.114.114.114
 server=/ups88.net/114.114.114.114
