accelerated-domains: add xeeger.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92049,6 +92049,7 @@ server=/xedaojia.com/114.114.114.114
 server=/xedaojia.net/114.114.114.114
 server=/xedge.cc/114.114.114.114
 server=/xeeee.net/114.114.114.114
+server=/xeeger.com/114.114.114.114
 server=/xeenho.com/114.114.114.114
 server=/xeeok.com/114.114.114.114
 server=/xefan.com/114.114.114.114
