--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74949,6 +74949,7 @@ server=/sdrunse.com/114.114.114.114
 server=/sdrxtf.com/114.114.114.114
 server=/sdsansen.com/114.114.114.114
 server=/sdsbhjgc.com/114.114.114.114
+server=/sdsdiy.com/114.114.114.114
 server=/sdsdsoft.com/114.114.114.114
 server=/sdsgwy.com/114.114.114.114
 server=/sdshangya.com/114.114.114.114
