--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92024,6 +92024,7 @@ server=/xdrtc.com/114.114.114.114
 server=/xdrun.com/114.114.114.114
 server=/xdsipo.com/114.114.114.114
 server=/xdsp.mobi/114.114.114.114
+server=/xdsyzzs.com/114.114.114.114
 server=/xdter.com/114.114.114.114
 server=/xdtev.com/114.114.114.114
 server=/xdtos.com/114.114.114.114
