accelerated-domains: add cnfth.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22248,6 +22248,7 @@ server=/cnfrag.com/114.114.114.114
 server=/cnfrp.com/114.114.114.114
 server=/cnfrp.net/114.114.114.114
 server=/cnfruit.com/114.114.114.114
+server=/cnfth.com/114.114.114.114
 server=/cnfuhuaqi.com/114.114.114.114
 server=/cnfuyin.org/114.114.114.114
 server=/cnfxc.com/114.114.114.114
