--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -11087,6 +11087,7 @@ server=/amz123.com/114.114.114.114
 server=/amz520.com/114.114.114.114
 server=/amz800.com/114.114.114.114
 server=/amzcaptain.com/114.114.114.114
+server=/amzcfo.com/114.114.114.114
 server=/amzcs.com/114.114.114.114
 server=/amzdh.com/114.114.114.114
 server=/amzics.com/114.114.114.114
