accelerated-domains: add ece-global.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29108,6 +29108,7 @@ server=/eccpos.com/114.114.114.114
 server=/ecdnx.com/114.114.114.114
 server=/ecdpower.net/114.114.114.114
 server=/ecduo.com/114.114.114.114
+server=/ece-global.com/114.114.114.114
 server=/eceibs.com/114.114.114.114
 server=/eceibs.net/114.114.114.114
 server=/eceibs20.com/114.114.114.114
