accelerated-domains: add ehengjian.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29537,6 +29537,7 @@ server=/ehcoo.com/114.114.114.114
 server=/ehealthcareforum.com/114.114.114.114
 server=/ehecd.com/114.114.114.114
 server=/ehedco.com/114.114.114.114
+server=/ehengjian.com/114.114.114.114
 server=/eheren.com/114.114.114.114
 server=/ehetech.com/114.114.114.114
 server=/ehhsrfn.com/114.114.114.114
