--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28934,6 +28934,7 @@ server=/eastmoneysec.com/114.114.114.114
 server=/eastobacco.com/114.114.114.114
 server=/eastpharm.com/114.114.114.114
 server=/eastpump.com/114.114.114.114
+server=/eastshanghaifair.com/114.114.114.114
 server=/eastsilver.com/114.114.114.114
 server=/eastsoo.com/114.114.114.114
 server=/eaststarbio.com/114.114.114.114
