accelerated-domains: add ecf-gov.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29118,6 +29118,7 @@ server=/ecer.com/114.114.114.114
 server=/ecerdns.com/114.114.114.114
 server=/ecerimg.com/114.114.114.114
 server=/ecezt.com/114.114.114.114
+server=/ecf-gov.com/114.114.114.114
 server=/ecgci.com/114.114.114.114
 server=/ecgoods.com/114.114.114.114
 server=/ecgtool.com/114.114.114.114
