accelerated-domains: add ikj168.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -47185,6 +47185,7 @@ server=/ikeguang.com/114.114.114.114
 server=/ikemeng.com/114.114.114.114
 server=/ikepu.com/114.114.114.114
 server=/ikhimalayaniq.com/114.114.114.114
+server=/ikj168.com/114.114.114.114
 server=/ikjds.com/114.114.114.114
 server=/ikjtao.com/114.114.114.114
 server=/ikjxc.com/114.114.114.114
