--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54203,6 +54203,7 @@ server=/kjgcl.com/114.114.114.114
 server=/kjghyjy.com/114.114.114.114
 server=/kjhaoyun.com/114.114.114.114
 server=/kjimg.com/114.114.114.114
+server=/kjingbao.com/114.114.114.114
 server=/kjiuye.com/114.114.114.114
 server=/kjjcrm.com/114.114.114.114
 server=/kjjl100.com/114.114.114.114
