accelerated-domains: add wto-btb.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90818,6 +90818,7 @@ server=/wtmicrowave.com/114.114.114.114
 server=/wtmtest.com/114.114.114.114
 server=/wtn-bearing.com/114.114.114.114
 server=/wtn5.com/114.114.114.114
+server=/wto-btb.com/114.114.114.114
 server=/wto168.net/114.114.114.114
 server=/wto9000.com/114.114.114.114
 server=/wtoip.com/114.114.114.114
