--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20979,6 +20979,7 @@ server=/chugou360.com/114.114.114.114
 server=/chuguo78.com/114.114.114.114
 server=/chuguohao.com/114.114.114.114
 server=/chuhai-club.com/114.114.114.114
+server=/chuhaige.com/114.114.114.114
 server=/chuimg.com/114.114.114.114
 server=/chuinet.com/114.114.114.114
 server=/chuisax.com/114.114.114.114
