accelerated-domains: add kuajingketang.cc

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54987,6 +54987,7 @@ server=/kuajing.com/114.114.114.114
 server=/kuajing.hk/114.114.114.114
 server=/kuajing84.com/114.114.114.114
 server=/kuajingai.com/114.114.114.114
+server=/kuajingketang.cc/114.114.114.114
 server=/kuajingmaihuo.com/114.114.114.114
 server=/kuajingnet.com/114.114.114.114
 server=/kuajingvs.com/114.114.114.114
