--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96058,6 +96058,7 @@ server=/yangmi.net/114.114.114.114
 server=/yangmingauction.com/114.114.114.114
 server=/yangner.com/114.114.114.114
 server=/yangnongchem.com/114.114.114.114
+server=/yangoo-global.com/114.114.114.114
 server=/yangpanzg.com/114.114.114.114
 server=/yangqi.show/114.114.114.114
 server=/yangqianguan.com/114.114.114.114
