accelerated-domains: add shiepmexpo.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76514,6 +76514,7 @@ server=/shidianbaike.com/114.114.114.114
 server=/shidianguji.com/114.114.114.114
 server=/shidiao136.com/114.114.114.114
 server=/shidoukeji.com/114.114.114.114
+server=/shiepmexpo.com/114.114.114.114
 server=/shifair.com/114.114.114.114
 server=/shifanedu.com/114.114.114.114
 server=/shifang.tech/114.114.114.114
