accelerated-domains: add szdxexpo.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81066,6 +81066,7 @@ server=/szdsit.com/114.114.114.114
 server=/szdunan.net/114.114.114.114
 server=/szdwyy.com/114.114.114.114
 server=/szdx189.com/114.114.114.114
+server=/szdxexpo.com/114.114.114.114
 server=/szdxfsrhyy.com/114.114.114.114
 server=/szdxjf.com/114.114.114.114
 server=/szdy168.com/114.114.114.114
