accelerated-domains: add usaeu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86185,6 +86185,7 @@ server=/usa-idc.com/114.114.114.114
 server=/usaapcups.com/114.114.114.114
 server=/usaas.net/114.114.114.114
 server=/usaedu.net/114.114.114.114
+server=/usaeu.com/114.114.114.114
 server=/usahaitao.com/114.114.114.114
 server=/usakongjian.net/114.114.114.114
 server=/usalink.xyz/114.114.114.114
