accelerated-domains: add hoyip.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43643,6 +43643,7 @@ server=/hoxue.com/114.114.114.114
 server=/hoyakeji.com/114.114.114.114
 server=/hoyatod.com/114.114.114.114
 server=/hoyibox.xyz/114.114.114.114
+server=/hoyip.com/114.114.114.114
 server=/hoyo.link/114.114.114.114
 server=/hoyoverse.com/114.114.114.114
 server=/hozest.com/114.114.114.114
