--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -47350,6 +47350,7 @@ server=/imbackr.com/114.114.114.114
 server=/imbeiyu.com/114.114.114.114
 server=/imblog.in/114.114.114.114
 server=/imbtk.com/114.114.114.114
+server=/imcart.com/114.114.114.114
 server=/imcclinics.com/114.114.114.114
 server=/imcec.org/114.114.114.114
 server=/imcivf.com/114.114.114.114
