--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13454,6 +13454,7 @@ server=/baoku.com/114.114.114.114
 server=/baokuandi.com/114.114.114.114
 server=/baokutreasury.com/114.114.114.114
 server=/baolansz.com/114.114.114.114
+server=/baoliannet.com/114.114.114.114
 server=/baolic.com/114.114.114.114
 server=/baolimingyuefenghua.com/114.114.114.114
 server=/baolizx.com/114.114.114.114
