--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76647,6 +76647,7 @@ server=/shipin520.com/114.114.114.114
 server=/shipinzhibojian.com/114.114.114.114
 server=/shipoe.com/114.114.114.114
 server=/shippingate.com/114.114.114.114
+server=/shipry.com/114.114.114.114
 server=/ships66.com/114.114.114.114
 server=/shipsc.org/114.114.114.114
 server=/shipservice.org/114.114.114.114
