--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85398,6 +85398,7 @@ server=/u-onewatch.com/114.114.114.114
 server=/u-qun.com/114.114.114.114
 server=/u-road.com/114.114.114.114
 server=/u-softtech.com/114.114.114.114
+server=/u-speedex.com/114.114.114.114
 server=/u.biz/114.114.114.114
 server=/u.sb/114.114.114.114
 server=/u.tools/114.114.114.114
