--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90600,6 +90600,7 @@ server=/wpengapp.com/114.114.114.114
 server=/wpeyes.com/114.114.114.114
 server=/wpgdadatong.com/114.114.114.114
 server=/wpgdadawant.com/114.114.114.114
+server=/wpglb.com/114.114.114.114
 server=/wphonelife.com/114.114.114.114
 server=/wphun.com/114.114.114.114
 server=/wping.org/114.114.114.114
