--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18829,6 +18829,7 @@ server=/cetcmotor.com/114.114.114.114
 server=/cetcssi.com/114.114.114.114
 server=/cetgps.com/114.114.114.114
 server=/cethik.com/114.114.114.114
+server=/cetkmh.com/114.114.114.114
 server=/ceultimate.com/114.114.114.114
 server=/ceve-market.org/114.114.114.114
 server=/cevsn.com/114.114.114.114
