accelerated-domains: add cbecx.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17836,6 +17836,7 @@ server=/cbe21.com/114.114.114.114
 server=/cbea.com/114.114.114.114
 server=/cbec365.com/114.114.114.114
 server=/cbecok.com/114.114.114.114
+server=/cbecx.com/114.114.114.114
 server=/cbeeexpo.com/114.114.114.114
 server=/cbes21.com/114.114.114.114
 server=/cbevent.com/114.114.114.114
