--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76600,6 +76600,7 @@ server=/shiluetl.com/114.114.114.114
 server=/shiluoji.com/114.114.114.114
 server=/shimano-fishchina.com/114.114.114.114
 server=/shimaoco.com/114.114.114.114
+server=/shimaotong.com/114.114.114.114
 server=/shimaowy.com/114.114.114.114
 server=/shimengyuan.com/114.114.114.114
 server=/shimengzhanghao.com/114.114.114.114
