--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81425,6 +81425,7 @@ server=/sztara.com/114.114.114.114
 server=/sztbjs.com/114.114.114.114
 server=/sztd123.com/114.114.114.114
 server=/szte.com/114.114.114.114
+server=/sztexun.com/114.114.114.114
 server=/szteyin.com/114.114.114.114
 server=/sztgxx.com/114.114.114.114
 server=/szthekey.com/114.114.114.114
