--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64326,6 +64326,7 @@ server=/newlongbj.com/114.114.114.114
 server=/newmaker.com/114.114.114.114
 server=/newman.mobi/114.114.114.114
 server=/newmargin.com/114.114.114.114
+server=/newmorehot.com/114.114.114.114
 server=/newnanbao.com/114.114.114.114
 server=/newnewle.com/114.114.114.114
 server=/newniu.com/114.114.114.114
