--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54045,6 +54045,7 @@ server=/kijifept.com/114.114.114.114
 server=/kikiwon.com/114.114.114.114
 server=/kikoplay.fun/114.114.114.114
 server=/kikusuitape.com/114.114.114.114
+server=/kikuu.com/114.114.114.114
 server=/kilamanbo.com/114.114.114.114
 server=/kililife.com/114.114.114.114
 server=/killdb.com/114.114.114.114
