accelerated-domains: add bricsgo.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16396,6 +16396,7 @@ server=/brhfh.com/114.114.114.114
 server=/brick4.com/114.114.114.114
 server=/brickmachinery.net/114.114.114.114
 server=/bricktou.com/114.114.114.114
+server=/bricsgo.com/114.114.114.114
 server=/bridge-image.com/114.114.114.114
 server=/bridgee.net/114.114.114.114
 server=/bridgelawfirm.com/114.114.114.114
