accelerated-domains: add ccbecexpo.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17907,6 +17907,7 @@ server=/ccbangong.com/114.114.114.114
 server=/ccbbn.org/114.114.114.114
 server=/ccbcos.com/114.114.114.114
 server=/ccbec-shenzhen.com/114.114.114.114
+server=/ccbecexpo.com/114.114.114.114
 server=/ccbft.com/114.114.114.114
 server=/ccbfund.com/114.114.114.114
 server=/ccbfutures.com/114.114.114.114
