--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12306,6 +12306,7 @@ server=/audiowellzq.com/114.114.114.114
 server=/audioxj.com/114.114.114.114
 server=/audlabs.com/114.114.114.114
 server=/audley-printer.com/114.114.114.114
+server=/audtools.com/114.114.114.114
 server=/augix.me/114.114.114.114
 server=/augsky.com/114.114.114.114
 server=/augth.com/114.114.114.114
