accelerated-domains: add easyya.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29014,6 +29014,7 @@ server=/easytouch.com/114.114.114.114
 server=/easytrip.com/114.114.114.114
 server=/easyv.cloud/114.114.114.114
 server=/easywza.com/114.114.114.114
+server=/easyya.com/114.114.114.114
 server=/easyzw.com/114.114.114.114
 server=/eating8.com/114.114.114.114
 server=/eaton-samc.com/114.114.114.114
