accelerated-domains: add stlb520.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79735,6 +79735,7 @@ server=/sthke.com/114.114.114.114
 server=/sticksgame.com/114.114.114.114
 server=/stjinguan.com/114.114.114.114
 server=/stklt.com/114.114.114.114
+server=/stlb520.com/114.114.114.114
 server=/stmaoyi.com/114.114.114.114
 server=/stmbuy.com/114.114.114.114
 server=/stmjsociety.com/114.114.114.114
