--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78576,6 +78576,7 @@ server=/smtiger.com/114.114.114.114
 server=/smtphub.org/114.114.114.114
 server=/smtro.com/114.114.114.114
 server=/smtsmt.com/114.114.114.114
+server=/smtso.com/114.114.114.114
 server=/smtsvs.com/114.114.114.114
 server=/smttouch.com/114.114.114.114
 server=/smtukuzy.com/114.114.114.114
