accelerated-domains: add i-shunxi.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46058,6 +46058,7 @@ server=/i-oranges.com/114.114.114.114
 server=/i-same.com/114.114.114.114
 server=/i-sensjs.com/114.114.114.114
 server=/i-shu.com/114.114.114.114
+server=/i-shunxi.com/114.114.114.114
 server=/i-size.com/114.114.114.114
 server=/i-tetris.com/114.114.114.114
 server=/i-tongfang.com/114.114.114.114
