accelerated-domains: add takesend.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81765,6 +81765,7 @@ server=/taizhouwater.com/114.114.114.114
 server=/taizibao.com/114.114.114.114
 server=/tajd.net/114.114.114.114
 server=/tajdny.com/114.114.114.114
+server=/takesend.com/114.114.114.114
 server=/takfat.com/114.114.114.114
 server=/takstar.com/114.114.114.114
 server=/takumi-cnc.com/114.114.114.114
