--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87687,6 +87687,7 @@ server=/wagen.cc/114.114.114.114
 server=/waha.cc/114.114.114.114
 server=/waheaven.com/114.114.114.114
 server=/wahlap.com/114.114.114.114
+server=/wahuto.com/114.114.114.114
 server=/wahyao.com/114.114.114.114
 server=/waibao123.com/114.114.114.114
 server=/waibao12333.com/114.114.114.114
