--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79010,6 +79010,7 @@ server=/sootoo.com/114.114.114.114
 server=/sootool.net/114.114.114.114
 server=/soovalve.com/114.114.114.114
 server=/soovvi.com/114.114.114.114
+server=/sooxie.com/114.114.114.114
 server=/sooxue.com/114.114.114.114
 server=/sooyooj.com/114.114.114.114
 server=/soozhu.com/114.114.114.114
