--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -2980,6 +2980,7 @@ server=/2chcn.com/114.114.114.114
 server=/2cloo.com/114.114.114.114
 server=/2cname.com/114.114.114.114
 server=/2cq.com/114.114.114.114
+server=/2cshop.com/114.114.114.114
 server=/2cto.com/114.114.114.114
 server=/2cubeglobal.com/114.114.114.114
 server=/2cycd.com/114.114.114.114
