accelerated-domains: add linkeabc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57416,6 +57416,7 @@ server=/linkchina.hk/114.114.114.114
 server=/linkcubecloud.net/114.114.114.114
 server=/linkdesign.tech/114.114.114.114
 server=/linkdialy.com/114.114.114.114
+server=/linkeabc.com/114.114.114.114
 server=/linkease.com/114.114.114.114
 server=/linked-f.com/114.114.114.114
 server=/linkedbyx.com/114.114.114.114
