accelerated-domains: add euforums.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30374,6 +30374,7 @@ server=/eudovb.com/114.114.114.114
 server=/euejia.com/114.114.114.114
 server=/eueui.com/114.114.114.114
 server=/eufc.org/114.114.114.114
+server=/euforums.com/114.114.114.114
 server=/eugnnn.com/114.114.114.114
 server=/eui.cc/114.114.114.114
 server=/euibe.com/114.114.114.114
