--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -88301,6 +88301,7 @@ server=/wbb-electric.com/114.114.114.114
 server=/wbbcdn.com/114.114.114.114
 server=/wbcm55.com/114.114.114.114
 server=/wbd99.com/114.114.114.114
+server=/wbeexpo.com/114.114.114.114
 server=/wbgt.net/114.114.114.114
 server=/wbhgwbnd.com/114.114.114.114
 server=/wbiao.co/114.114.114.114
