accelerated-domains: add tpsea.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84273,6 +84273,7 @@ server=/tpqxb.com/114.114.114.114
 server=/tprtc.com/114.114.114.114
 server=/tps138.info/114.114.114.114
 server=/tpsbp.com/114.114.114.114
+server=/tpsea.com/114.114.114.114
 server=/tpsge.com/114.114.114.114
 server=/tpsns.com/114.114.114.114
 server=/tpsxs.com/114.114.114.114
