--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57404,6 +57404,7 @@ server=/linjin.net/114.114.114.114
 server=/linjunlong.com/114.114.114.114
 server=/link-ai.tech/114.114.114.114
 server=/link-nemo.com/114.114.114.114
+server=/link-trans.com/114.114.114.114
 server=/link27.com/114.114.114.114
 server=/link2lib.com/114.114.114.114
 server=/link2shops.com/114.114.114.114
