accelerated-domains: add globalston.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35269,6 +35269,7 @@ server=/globalso.site/114.114.114.114
 server=/globalsources.com/114.114.114.114
 server=/globalsourcingbiz.com/114.114.114.114
 server=/globalstech.com/114.114.114.114
+server=/globalston.com/114.114.114.114
 server=/globaltradecoo.com/114.114.114.114
 server=/globalx-nest.com/114.114.114.114
 server=/globebill.com/114.114.114.114
