--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55015,6 +55015,7 @@ server=/kuakao.com/114.114.114.114
 server=/kuakao.net/114.114.114.114
 server=/kuake666.com/114.114.114.114
 server=/kuake8.com/114.114.114.114
+server=/kuamarketer.com/114.114.114.114
 server=/kuaming.com/114.114.114.114
 server=/kuandaige.com/114.114.114.114
 server=/kuanfans.com/114.114.114.114
