accelerated-domains: add odalong.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66492,6 +66492,7 @@ server=/oculist.net/114.114.114.114
 server=/ocuwyfarlvbq.com/114.114.114.114
 server=/ocwms.com/114.114.114.114
 server=/odaily.news/114.114.114.114
+server=/odalong.com/114.114.114.114
 server=/odao.com/114.114.114.114
 server=/oddyqw.com/114.114.114.114
 server=/odict.net/114.114.114.114
