accelerated-domains: add ztn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -104414,6 +104414,7 @@ server=/ztkycn.com/114.114.114.114
 server=/ztlycm.com/114.114.114.114
 server=/ztmao.com/114.114.114.114
 server=/ztmvip.com/114.114.114.114
+server=/ztn.com/114.114.114.114
 server=/ztnews.net/114.114.114.114
 server=/ztno.com/114.114.114.114
 server=/ztny188.com/114.114.114.114
