--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -47200,6 +47200,7 @@ server=/ikeguang.com/114.114.114.114
 server=/ikemeng.com/114.114.114.114
 server=/ikepu.com/114.114.114.114
 server=/ikhimalayaniq.com/114.114.114.114
+server=/ikj123.com/114.114.114.114
 server=/ikj168.com/114.114.114.114
 server=/ikjds.com/114.114.114.114
 server=/ikjtao.com/114.114.114.114
