--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -1773,6 +1773,7 @@ server=/17207.com/114.114.114.114
 server=/172haoka.vip/114.114.114.114
 server=/172l.com/114.114.114.114
 server=/172tt.com/114.114.114.114
+server=/172xiaoyuan.com/114.114.114.114
 server=/173.com/114.114.114.114
 server=/173.tv/114.114.114.114
 server=/1732.com/114.114.114.114
