--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94938,6 +94938,7 @@ server=/xstx.info/114.114.114.114
 server=/xstzgs.com/114.114.114.114
 server=/xsu.cc/114.114.114.114
 server=/xsui.com/114.114.114.114
+server=/xsuweb.com/114.114.114.114
 server=/xswang.com/114.114.114.114
 server=/xswdcasting.com/114.114.114.114
 server=/xsxgjsw.com/114.114.114.114
