--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51876,6 +51876,7 @@ server=/jsbgj.com/114.114.114.114
 server=/jsbzwh.com/114.114.114.114
 server=/jscdn.ink/114.114.114.114
 server=/jscdwlw.com/114.114.114.114
+server=/jsceb.com/114.114.114.114
 server=/jscelltech.com/114.114.114.114
 server=/jsceou.com/114.114.114.114
 server=/jschahua.com/114.114.114.114
